--- a/css/style.css
+++ b/css/style.css
@@ -414,6 +414,11 @@ body{
     background: var(--bg-color);
     border-top: .1rem solid rgba((0,0,0.2));
     box-shadow: 0 0.5 1rem rgba(0,0,0, .2);
+    display: none;
+  }
+  
+  .navbar .active {
+    display: block;
   }
 
   .navbar{
