--- a/css/style.css
+++ b/css/style.css
@@ -471,3 +471,8 @@ body{
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media (max-width:615px){
+  .portfolio-container{
+    grid-template-columns: 1fr;
+  }
+}
