--- a/css/style.css
+++ b/css/style.css
@@ -476,3 +476,30 @@ body{
     grid-template-columns: 1fr;
   }
 }
+
+@media(max-width:450px){
+  html{
+    font-size: 50%;
+  }
+  .contact form .input-box input {
+    width: 100%;
+  }
+}
+
+@media(max-width: 365px){
+  .home-img{
+    width: 90vw;
+  }
+  .about-img {
+    width: 90vw;
+  }
+
+  .footer{
+    flex-direction: column-reverse;
+  }
+
+  .footer{
+    text-align: center;
+    margin-top: 2rem;
+  }
+}
