--- a/css/style.css
+++ b/css/style.css
@@ -1,166 +1,163 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
-
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-text-decoration: none;
-border: none;
-outline: none;
-scroll-behavior: smooth;
-font-family:Poppins, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
 }
 
-:root{
-    --bg-color:#1f242d;
-    --second-bg-color:#323946;
-    --text-color: #fff;
-    --main-color: #0ef;
-}
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
+:root {
+  --bg-color: #1f242d;
+  --second-bg-color: #323946;
+  --text-color: #fff;
+  --main-color: #0ef;
 }
 
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
 
-body{
-    background: var(--bg-color);
-    color: var(--text-color);
+.logo {
+  font-size: 2.5rem;
+  color: var(--text-color);
+}
+
+body {
+  background: var(--bg-color);
+  color: var(--text-color);
 }
 
 .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 2rem 9%;
-    background: var(--bg-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2rem 9%;
+  background: var(--bg-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
 }
 
-.logo{
-    font-size: 2.5rem;
-    color: var(--text-color);
-    font-weight: 600;
-    cursor: default;
-    transition: 0.5s ease;
-}
-.logo:hover{
-    color:#0ef
+.logo {
+  font-size: 2.5rem;
+  color: var(--text-color);
+  font-weight: 600;
+  cursor: default;
 }
 
 .navbar a {
-    font-size: 1.7rem;
-    color: var(--text-color);
-    margin-left: 4rem;
-    transition: 0.3s ease;
+  font-size: 1.7rem;
+  color: var(--text-color);
+  margin-left: 4rem;
+  transition: 0.3s;
 }
+
 .navbar a:hover,
 .navbar a.active {
-    color: var(--main-color);
+  color: var(--main-color);
 }
 
-#menu-icon{
-    font-size: 3.6rem;
-    color: var(--text-color);
-    display: none;
+#menu-icon {
+  font-size: 3.6rem;
+  color: var (--text-color);
+  display: none;
 }
 
-.home{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 10px;
-    margin-top: 10%;
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  margin-top: 10%;
 }
 
 .home-img img {
-    width: 35vw;
-    margin-left: 10px;
-    margin-top: 2rem;
-    animation: floatImage 4s ease-in-out infinite;
-
+  width: 35vw;
+  margin-left: 10px;
+  animation: floatImage 4s ease-in-out infinite;
 }
 
 @keyframes floatImage {
-  0%{
+  0% {
     transform: translateY(0);
   }
-  50%{
+  50% {
     transform: translateY(-2.5rem);
   }
-  100%{
+  100% {
     transform: translateY(0);
   }
 }
 
 .home-content h3 {
-    font-size: 3.2rem;
-    font-weight: 700;
+  font-size: 3.2rem;
+  font-weight: 700;
 }
 
 .home-content h3:nth-of-type(2) {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .home-content h1 {
-    font-size: 5.6rem;
-    font-weight: 700;
-    line-height: 1.3;
+  font-size: 5.6rem;
+  font-weight: 700;
+  line-height: 1.3;
 }
 
 .home-content p {
-    font-size: 1.6rem;
-    /* width: 900px; */
+  font-size: 1.6rem;
+  width: 900px;
 }
 
 .home-content span {
-    color: var(--main-color)
-  }
-
-.social-media a {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 4rem;
-    height: 4rem;
-    background: transparent;
-    border: .2rem solid var(--main-color);
-    font-size: 2rem;
-    color: var(--second-bg-color);
-    margin: 3rem 1.5rem 3rem 0;
-    transition: 0.5s ease;
+  color: var(--main-color)
 }
 
-.social-media a:hover{
-    background: var(--main-color);
-    color: var(--second-bg-color);
-    box-shadow: 0 0 1rem var(--main-color);
+.social-media a {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  background: transparent;
+  border: .2rem solid var(--main-color);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: var(--second-bg-color);
+  margin: 3rem 1.5rem 3rem 0;
+  transition: 0.5s ease;
+}
+
+.social-media a:hover {
+  background: var(--main-color);
+  color: var(--second-bg-color);
+  box-shadow: 0 0 1rem var(--main-color);
 }
 
 .btn {
-    display: inline-block;
-    padding: 1rem 2.8rem;
-    background: var(--main-color);
-    border-radius: 4rem;
-    box-shadow: 0 0 1rem var(--main-color);
-    font-size: 1.6rem;
-    color: var(--second-bg-color);
-    letter-spacing: .1rem;
-    font-weight: 600;
-    transition: 0.5s ease;
+  display: inline-block; 
+  padding: 1rem 2.8rem;
+  background: var(--main-color); 
+  border-radius: 4rem; 
+  box-shadow:0 0 1rem var(--main-color);
+  font-size: 1.6rem; 
+  color: var(--second-bg-color); 
+  letter-spacing: .1rem; 
+  font-weight: 600; 
+  transition: 0.5s ease;
 }
 
-.btn:hover{
-    box-shadow: none;
+.btn:hover {
+  box-shadow: none;
 }
-
 
 .about {
   display: flex;
@@ -195,93 +192,88 @@ body{
 }
 
 .services h2 {
-    margin-bottom: 5rem;
-    margin-top: 3rem;
-  }
-  
-  .services-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-    margin-bottom: 5rem;
-    padding-bottom: 16rem;
-  }
-  
-  .services-container .services-box {
-    flex: 1 1 30rem;
-    background: var(--second-bg-color);
-    padding: 3rem 2rem 4rem;
-    text-align: center;
-    border: .2rem solid var(--bg-color);
-    transition: .5s ease;
-    border-radius: 2rem;
-  }
-  
-  .services-container .services-box:hover {
-    border-color: var(--main-color);
-    transform: scale(1.02);
-  }
-  
-  .services-box i {
-    font-size: 7rem;
-    color: var(--main-color);
-  }
-  
-  .services-box h3 {
-    font-size: 2.6rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  .services-box p {
-    font-size: 1.7rem;
-    margin-bottom: 1.5rem;
-  }
+  margin-bottom: 5rem;
+  margin-top: 3rem;
+}
 
-  .portfolio{
-    background: var(--second-bg-color);
-  }
+.services-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-bottom: 5rem;
+}
 
-  .portfolio h2{
-    margin: bottom 4rem; ;
-  }
+.services-container .services-box {
+  flex: 1 1 30rem;
+  background: var(--second-bg-color);
+  padding: 3rem 2rem 4rem;
+  text-align: center;
+  border: .2rem solid var(--bg-color);
+  transition: .5s ease;
+  border-radius: 2rem;
+}
 
-  .portfolio-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: center;
-    gap: 2.5rem;
-  }
+.services-container .services-box:hover {
+  border-color: var(--main-color);
+  transform: scale(1.02);
+}
 
-  .portfolio-container .portfolio-box {
-    position: relative;
-    border-radius: 2rem;
-    box-shadow: 0 0 1rem var(--bg-color);
-    overflow: hidden;
-    display: flex;
+.services-box i {
+  font-size: 7rem;
+  color: var(--main-color);
+}
 
-  }
+.services-box h3 {
+  font-size: 2.6rem;
+  margin-bottom: 1.5rem;
+}
 
+.services-box p {
+  font-size: 1.7rem;
+  margin-bottom: 1.5rem;
+}
 
-.portfolio-box img{
+.portfolio {
+  background: var(--second-bg-color);
+}
+
+.portfolio h2 {
+  margin-bottom: 4rem;
+}
+
+.portfolio-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  gap: 2.5rem;
+}
+
+.portfolio-container .portfolio-box {
+  position: relative;
+  border-radius: 2rem;
+  box-shadow: 0 0 1rem var(--bg-color);
+  overflow: hidden;
+  display: flex;
+}
+
+.portfolio-box img {
   width: 100%;
   transition: .5s ease;
-
 }
 
 .portfolio-box img:hover {
   transform: scale(1.1);
-
 }
 
-.portfolio-box .portfolio-layer{
+.portfolio-box .portfolio-layer {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(0, 0, 0, .1),var(--main-color));
+  background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -298,7 +290,6 @@ body{
 
 .portfolio-layer h4 {
   font-size: 3rem;
-
 }
 
 .portfolio-layer p {
@@ -314,8 +305,8 @@ body{
   height: 5rem;
   background: var(--text-color);
   border-radius: 50%;
-
 }
+
 .portfolio-layer a i {
   font-size: 2rem;
   color: var(--second-bg-color);
@@ -323,7 +314,6 @@ body{
 
 .contact h2 {
   margin-bottom: 3rem;
-
 }
 
 .contact form {
@@ -362,6 +352,7 @@ body{
   margin-top: 2rem;
   cursor: pointer;
 }
+
 .footer {
   display: flex;
   justify-content: space-between;
@@ -392,81 +383,87 @@ body{
 .footer-iconTop a i {
   font-size: 2.4rem;
   color: var(--second-bg-color);
-
 }
 
-/* breakpoints */
-@media(max-width: 1200px){
-  html{
+/* BREAKPOINTS */
+@media (max-width: 1200px) {
+  html {
     font-size: 55%;
   }
 }
 
-@media(max-width: 991px){
-  .header{
+@media (max-width: 991px) {
+  .header {
     padding: 2rem 3%;
   }
 
   section {
     padding: 10rem 3% 2rem;
   }
-  .services{
+
+  .services {
     padding-bottom: 7rem;
   }
 
-  .footer{
-    padding: 2rem;
+  .footer {
+    padding: 2rem 3%;
   }
 
-  .portfolio{
+  .portfolio {
     padding-bottom: 7rem;
+  }
+
+  .contact {
+    min-height: auto;
   }
 }
 
-@media(max-width: 768px){
-  #menu-icon{
+@media (max-width: 768px) {
+  #menu-icon {
     display: block;
   }
 
-  .navbar{
+  .navbar {
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
     padding: 1rem 3%;
-    background: var(--bg-color);
-    border-top: .1rem solid rgba((0,0,0.2));
-    box-shadow: 0 0.5 1rem rgba(0,0,0, .2);
+    background: (var(--bg-color));
+    border-top: .1rem solid rgba(0, 0, 0, .2);
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2);
     display: none;
   }
 
-  .navbar .active {
+  .navbar.active {
     display: block;
   }
 
-  .navbar{
+  .navbar a {
     display: block;
     font-size: 2rem;
     margin: 3rem 0;
   }
-  .home{
+
+  .home {
     flex-direction: column;
   }
+
   .home h3 {
     font-size: 2.6rem;
   }
+
   .home h1 {
     font-size: 5rem;
   }
 
-  .home-img{
+  .home-img img {
     width: 70vw;
     margin-top: 4rem;
   }
 
-  .about{
+  .about {
     flex-direction: column-reverse;
-
   }
 
   .about img {
@@ -476,32 +473,25 @@ body{
 
   .services h2 {
     margin-bottom: 3rem;
-
   }
 
   .portfolio h2 {
     margin-bottom: 3rem;
   }
 
-  .portfolio-container{
+  .portfolio-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (max-width:615px){
-  .portfolio-container{
+
+@media (max-width: 615px) {
+  .portfolio-container {
     grid-template-columns: 1fr;
   }
 }
-/* @media(max-width:550){
-  body{
-    display: flex;
-    justify-content: center;
-  }
 
-} */
-
-@media(max-width:450px){
-  html{
+@media (max-width: 450px) {
+  html {
     font-size: 50%;
     width: 100%;
   }
@@ -510,21 +500,21 @@ body{
   }
 }
 
-@media(max-width: 365px){
-  .home-img{
-    width: 90vw;
-  }
-  .about-img {
+@media (max-width: 365px) {
+  .home-img img {
     width: 90vw;
   }
 
-  .footer{
+  .about-img img {
+    width: 90vw;
+  }
+
+  .footer {
     flex-direction: column-reverse;
   }
 
-  .footer{
+  .footer p {
     text-align: center;
     margin-top: 2rem;
   }
 }
-
