--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,10 @@
 }
 
 :root {
-  --bg-color: #1f242d;
-  --second-bg-color: #323946;
+  --bg-color: #52733B;
+  --second-bg-color: #84a45a;
   --text-color: #fff;
-  --main-color: #0ef;
+  --main-color: rgb(255, 234, 0);
 }
 
 html {
