--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: "Poppins", sans-serif;
+  font-family: "Alumni Sans", sans-serif;
 }
 
 :root {
-  --bg-color: #1f242d;
-  --second-bg-color: #323946;
+  --bg-color: #52733B;
+  --second-bg-color: #84a45a;
   --text-color: #fff;
-  --main-color: #0ef;
+  --main-color: rgb(255, 234, 0);
 }
 
 html {
@@ -165,6 +165,9 @@ body {
   align-items: center;
   gap: 2rem;
   background: var(--second-bg-color);
+  background-image: url('/images/mountains_dark.png');
+  background-size: cover;
+  background-position: center;
 }
 
 .about-img img {
